--- a/courses/templates/index.html
+++ b/courses/templates/index.html
@@ -7,7 +7,8 @@
         <div class="row h-100 align-items-center">
             <div class="col-12">
                 <div class="hero-content text-center">
-                    <h2>BCSP EXAM-PREP COURSES</h2>
+                    <h2>Online Training for the Safety Professional CSP ASP CHST and Candidates / Online Safety Training for Engineers and Architects (PDH) IACET CEU 
+</h2>
                     <a href="{% url 'courses_list' %}" class="btn btn-orange">Browse Courses</a>
                 </div>
             </div>
