--- a/courses/templates/__app_base.html
+++ b/courses/templates/__app_base.html
@@ -587,7 +587,7 @@
                                 </li>
                                 <li><a href="{% url 'about_detail' %}">About Us</a></li>
                                 <li><a href="{% url 'contact_detail' %}">Contact Us</a></li>
-                                <li><a href="{% url 'sst_verify' %}">Test CARD Verification </a></li>
+                                <li><a href="{% url 'sst_verify' %}">Training Verification </a></li>
                             </ul>
                             <!-- Search Button -->
                             <div class=" search-area d-none">
