--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -562,14 +562,14 @@
                         <a href="{% url  'admin_dashboard' %}" class="text-white">Admin Dashboard</a>
                         {% endif %}
                     </li>
-                    <li><a href="{% url 'logout' %}"  class="text-white">Sign Out</a></li>
+                    <li><a href="{% url 'logout' %}"  class="text-white mt-2">Sign Out</a></li>
                 </ul>
             </div>
             {%endif%}
         </div>
         <div class="offcanvas__nav__option">
-            <a href="#" class="text-dark"><i class="icon_cart"></i> <span>(0)</span></a>
-            <div class="price">$0.00</div>
+            <a href="{% url 'cart_detail'%}" class="text-dark"><i class="icon_cart"></i> <span class="lbl-cart-items-count">(0)</span></a>
+            <div class="price lbl-cart-items-price">$0.00</div>
         </div>
         <div id="mobile-menu-wrap"></div>
         <div class="offcanvas__text">
@@ -598,7 +598,8 @@
                     <div class="col-lg-6 col-md-5">
                         <div class="header__top__right">
                             <div class="header__top__links">
-                                <a href="#"><i class="icon_cart"></i> <span>(0)</span><span>$0.00</span></a>
+                                <a href="{% url 'cart_detail'%}"><i class="icon_cart"></i> <span class='lbl-cart-items-count'>(0)</span>
+                                <span class='lbl-cart-items-price'>$0.00</span></a>
                                 {% if request.user.is_authenticated  %}
                                 {% if request.user.is_teacher == True %}
                                 <a href="{% url 'teacher_dashboard' %}" class="text-orange">Teacher Dashboard</a>
@@ -659,6 +660,7 @@
                             <li><a href="/about">About</a></li>
                             <li><a href="/contact">Contact</a></li>
                             <li><a href="/sst-verify/">Test Card Verification </a></li>
+                            <li><a href="{%url 'cart_detail'%}">My Cart </a></li>
                         </ul>
                     </nav>
                 </div>
@@ -718,9 +720,12 @@
     <script src="{% static "/fe_v1/js/jquery-3.3.1.min.js" %}"></script>
     <script src="{% static "/fe_v1/js/bootstrap.min.js" %}"></script>
     <script src="{% static "/fe_v1/js/jquery.slicknav.js" %}"></script>
-    <script src="{% static "/fe_v1/js/main.js" %}"></script>
     <script src="{% static "/fe_v1/plugins/handlebars.min.js" %}"></script>
     <script src="{% static "/fe_v1/plugins/jquery.form.min.js" %}"></script>
+    <script src="{% static "/fe_v1/plugins/sweetalert.min.js" %}"></script>
+    
+     <script src="{% static "/fe_v1/js/main.js" %}"></script>
+     <script src="{% static "/fe_v1/js/cart.js" %}"></script>
     {% comment %} <script src="{% static "/plugins/jquery/jquery-ui.min.js" %}"></script>
     <script src="{% static "/pickadate/jquery.datetimepicker.full.min.js" %}"></script>
     <script src="{% static "/plugins/toastr/toastr.min.js" %}"></script>
