--- a/courses/templates/courses/course/list.html
+++ b/courses/templates/courses/course/list.html
@@ -19,7 +19,8 @@ All courses
                 <select class="form-control" id="ddlCategory">
                     <option value="{% url "courses_list" %}">All Courses</option>
                     {% for s in subjects %}
-                    <option  {% if subject == s %} selected {% endif %} value="{% url "course_list_subject" s.slug %}">{{ s.title }} ({{ s.total_courses }})
+                    <option {% if subject == s %} selected {% endif %} value="{% url "course_list_subject" s.slug %}">
+                        {{ s.title }} ({{ s.total_courses }})
                     </option>
                     {% endfor %}
                 </select>
@@ -63,7 +64,15 @@ All courses
                     <div class="row">
                         {% for course in courses %}
                         {% with subject=course.subject %}
-                        <div class="col-md-6 col-lg-4 mb-3">
+                        <div class="col-md-6 col-lg-4 mb-3 course-item">
+
+                            <input type="hidden" name="id" value="{{course.id}}" />
+                            <input type="hidden" name="title" value="{{course.title}}" />
+                            <input type="hidden" name="subject" value="{{subject}}" />
+                            <input type="hidden" name="price" value="{{course.price}}" />
+                            <input type="hidden" name="discounted_price" value="{{course.discounted_price}}" />
+                            <input type="hidden" name="modules" value="{{course.total_modules}}" />
+
                             <div class="card home-course">
                                 <div class="card-body">
                                     <a href="{% url "course_detail" course.slug %}">
@@ -93,11 +102,11 @@ All courses
                                         </div>
                                         {% if course.is_free%}
                                         <a href="{% url "course_detail" course.slug %}"
-                                            class="btn btn-orange btn-sm mt-3"><i class="fa fa-list-alt"></i>
+                                            class="btn btn-light  btn-sm mt-3"><i class="fa fa-list-alt"></i>
                                             View Course
                                         </a>
                                         {% else %}
-                                        <a href="#" class="btn btn-orange btn-sm mt-3"><i class="fa fa-plus"></i>
+                                        <a href="javascript:;" class="btn btn-orange btn-sm mt-3 link-add-cart"><i class="fa fa-plus"></i>
                                             Add to
                                             Cart</a>
                                         {% endif %}
