--- a/courses/templates/index.html
+++ b/courses/templates/index.html
@@ -70,6 +70,9 @@
                             </div>
                             <span class="badge badge-info">Modules ({{total_modules}})</span>
                         </div>
+                         <div class="card-footer text-center">
+                                    <a href="/course/{{slug}}" class="text-info">View Details</a>
+                                </div>
                     </div>
                 </div>
     
