--- a/courses/static/fe_v1/css/style.css
+++ b/courses/static/fe_v1/css/style.css
@@ -1,16 +1,10 @@
-html,
-body {
+html, body {
 	height: 100%;
 	font-family: "Nunito Sans", sans-serif;
 	-webkit-font-smoothing: antialiased;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3, h4, h5, h6 {
 	margin: 0;
 	color: #111111;
 	font-weight: 400;
@@ -54,15 +48,13 @@ img {
 	max-width: 100%;
 }
 
-a:hover,
-a:focus {
+a:hover, a:focus {
 	text-decoration: none;
 	outline: none;
 	color: #000;
 }
 
-ul,
-ol {
+ul, ol {
 	padding: 0;
 	margin: 0;
 }
@@ -72,9 +64,9 @@ ol {
 -----------------------*/
 
 .btn-orange {
-    color: #fff;
-    border-color: #e53637;
-    background: #e53637;
+	color: #fff;
+	border-color: #e53637;
+	background: #e53637;
 }
 
 .text-orange {
@@ -145,7 +137,6 @@ ol {
 	}
 }
 
-
 /*---------------------
   Header
 -----------------------*/
@@ -170,7 +161,7 @@ ol {
 
 .header__top__links {
 	display: inline-block;
-	margin-right:5px;
+	margin-right: 5px;
 }
 
 .header__top__links a {
@@ -231,11 +222,11 @@ ol {
 }
 
 .header__top__hover ul li {
-    list-style: none;
-    font-size: 14px;
-    color: #111111;
-    padding: 8px 22px;
-    cursor: pointer;
+	list-style: none;
+	font-size: 14px;
+	color: #111111;
+	padding: 8px 22px;
+	cursor: pointer;
 }
 
 .header__top__hover ul li a {
@@ -250,8 +241,8 @@ ol {
 .header__logo a {
 	display: inline-block;
 	font-size: 16px;
-    font-weight: 700;
-    color: #111;
+	font-weight: 700;
+	color: #111;
 }
 
 .header__menu {
@@ -371,31 +362,31 @@ ol {
 
 .header__top__left a {
 	font-size: 12px;
-    margin-right: 20px;
+	margin-right: 20px;
 }
 
 /* home banner */
 
 .hero-area {
 	position: relative;
-    z-index: 2;
-    width: 100%;
-    height: 400px;
-    background-attachment: fixed;
+	z-index: 2;
+	width: 100%;
+	height: 400px;
+	background-attachment: fixed;
 	background-position: center center;
-    background-size: cover;
+	background-size: cover;
 }
 
 .hero-area .hero-content {
 	background: #11111191;
-    padding: 20px;
+	padding: 20px;
 }
 
 .hero-area .hero-content h2 {
-    font-size: 40px;
-    margin-bottom: 30px;
-    font-weight: 700;
-    color: #ffffff;
+	font-size: 40px;
+	margin-bottom: 30px;
+	font-weight: 700;
+	color: #ffffff;
 }
 
 /* home courses */
@@ -406,57 +397,57 @@ ol {
 
 .home-courses h3 {
 	color: #111111;
-    font-weight: 700;
-    line-height: 46px;
-    margin-bottom: 10px;
+	font-weight: 700;
+	line-height: 46px;
+	margin-bottom: 10px;
 }
 
 .home-course img {
 	width: 3rem !important;
-    height: 3rem !important;
-    border-radius: 7px;
+	height: 3rem !important;
+	border-radius: 7px;
 }
 
 .home-course .badge {
 	position: absolute;
-    top: 24px;
-    right: 17px;
+	top: 24px;
+	right: 17px;
 	background: #676666;
 }
 
 .home-course .card-title {
 	font-size: 19px;
-    margin-bottom: 17px;
+	margin-bottom: 17px;
 }
 
 .home-course .btn-orange {
-    color: #fff;
-    border-color: #676666;
-    background: #676666;
+	color: #fff;
+	border-color: #676666;
+	background: #676666;
 }
 
 .footer-area {
 	position: relative;
-    z-index: 1;
-    background-color: #111;
-    padding: 40px 0;
-    text-align: center;
-    border-bottom: 1px solid #4c4c4c;
+	z-index: 1;
+	background-color: #111;
+	padding: 40px 0;
+	text-align: center;
+	border-bottom: 1px solid #4c4c4c;
 }
 
 .bottom-footer-area {
 	position: relative;
-    z-index: 1;
-    width: 100%;
-    height: 40px;
-    background-color: #1f1f1f;
-    margin: 20px 0;
-    text-align: center;
+	z-index: 1;
+	width: 100%;
+	height: 40px;
+	background-color: #1f1f1f;
+	margin: 20px 0;
+	text-align: center;
 }
 
 .bottom-footer-area a {
 	margin-right: 15px;
-	color:#fff !important;
+	color: #fff !important;
 	line-height: 40px;
 }
 
@@ -464,7 +455,7 @@ ol {
 
 .course-detail .nav-link {
 	margin-right: 10px;
-    margin-bottom: 10px;
+	margin-bottom: 10px;
 	background: #878787 !important;
 	color: #fff !important;
 	border: 1px solid #878787 !important;
@@ -477,13 +468,18 @@ ol {
 }
 
 .course-detail .about-course {
-    padding: 40px;
-    box-shadow: 0 0 10px rgb(0 0 0 / 15%);
+	padding: 40px;
+	box-shadow: 0 0 10px rgb(0 0 0 / 15%);
 }
 
 .course-detail .about-course h4 {
-margin-bottom: 10px;	
-} 
+	margin-bottom: 10px;
+}
+
+.course-detail .badge-primary {
+	white-space: break-spaces;
+	line-height: 22px;
+}
 
 /* Wide Mobile = 480px */
 
@@ -553,8 +549,7 @@ margin-bottom: 10px;
 	.slicknav_nav ul {
 		margin: 0;
 	}
-	.slicknav_nav .slicknav_row,
-	.slicknav_nav a {
+	.slicknav_nav .slicknav_row, .slicknav_nav a {
 		padding: 7px 0;
 		margin: 0;
 		color: #111111;
@@ -650,7 +645,6 @@ margin-bottom: 10px;
 		margin-right: 26px;
 		position: relative;
 	}
-	
 	.offcanvas__nav__option a:last-child {
 		margin-right: 0;
 	}
@@ -678,9 +672,7 @@ margin-bottom: 10px;
 	.header__nav__option {
 		display: none;
 	}
-
 	.header__logo a {
 		font-size: 12px;
 	}
-
 }
