--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -659,7 +659,7 @@
                             </li>
                             <li><a href="/about">About</a></li>
                             <li><a href="/contact">Contact</a></li>
-                            <li><a href="/sst-verify/">Test Card Verification </a></li>
+                            <li><a href="/sst-verify/">Training Verification </a></li>
                             <li><a href="{%url 'cart_detail'%}">My Cart </a></li>
                         </ul>
                     </nav>
