--- a/courses/templates/index.html
+++ b/courses/templates/index.html
@@ -7,7 +7,7 @@
         <div class="row h-100 align-items-center">
             <div class="col-12">
                 <div class="hero-content text-center">
-                    <h2>PDH (Professional Development Unit) + BCSP (IACET) CEU Credits  Online Training for the Safety Professionals CSP ASP CHST and Candidates / Online Safety Training for Engineers and Architects (PDH) IACET CEU 
+                    <h2>PDHs (Professional Development Units) + (IACET) CEUs (Continuing Education Units) Credits  Online Training for the Safety Professionals CSP ASP CHST and Candidates / Online Safety Training for Engineers and Architects (PDH) IACET CEU 
 </h2>
                     <a href="{% url 'courses_list' %}" class="btn btn-orange">Browse Courses</a>
                 </div>
