--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -720,9 +720,11 @@
     <script src="{% static "/fe_v1/js/jquery-3.3.1.min.js" %}"></script>
     <script src="{% static "/fe_v1/js/bootstrap.min.js" %}"></script>
     <script src="{% static "/fe_v1/js/jquery.slicknav.js" %}"></script>
+
     <script src="{% static "/fe_v1/plugins/handlebars.min.js" %}"></script>
     <script src="{% static "/fe_v1/plugins/jquery.form.min.js" %}"></script>
     <script src="{% static "/fe_v1/plugins/sweetalert.min.js" %}"></script>
+    <script src="{% static "/fe_v1/plugins/jquery.validate.min.js" %}"></script>
     
      <script src="{% static "/fe_v1/js/main.js" %}"></script>
      <script src="{% static "/fe_v1/js/cart.js" %}"></script>
