--- a/students/templates/students/course/certificate_template.html
+++ b/students/templates/students/course/certificate_template.html
@@ -1,5 +1,4 @@
 {% load staticfiles %}
-
 <html>
 
 <head>
@@ -268,30 +267,37 @@
 		}
 		-->
 	</style>
-
 </head>
 
 <body lang=EN-US link=blue vlink="#954F72">
-
 	<div class=WordSection1>
-
-		<table align='center' class=MsoNormalTable border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;margin: 31pt auto 0 auto;'>
+		<table align='center' class=MsoNormalTable border=0 cellspacing=0 cellpadding=0
+			style='border-collapse:collapse;margin: 43pt auto 0 auto;'>
 			<tr style='page-break-inside:avoid;height:418.55pt'>
-				<td width=757 valign=top style='width:568.1pt;padding:0in 5.4pt 0in 5.4pt;
-  height:418.55pt'>
-					<p class=Heading><span style='position:relative;z-index:251659264'>
-					<span
-							style='font-size:48.0pt'>Certificate of
+				<td width=757 valign=top style='width:568.1pt;padding:0in 5.4pt 0in 5.4pt;height:418.55pt'>
+					<p class=MsoNormal align=center style='margin-right:.75pt;text-align:center;
+  background:white'>&nbsp;</p>
+					<p class=MsoNormal align=center style='margin-right:.75pt;text-align:center;
+  background:white'>&nbsp;</p>
+					<p class=Heading>
+						<span style='font-size:48.0pt'>Certificate of
 							Training </span>
-							<br>
-							Presented by
-							</p>
+						<br>
+						<br>
+						
+						Presented by
+					</p>
 					<p class=MsoNormal align=center style='text-align:center'>&nbsp;</p>
 					<p class=MsoNormal align=center style='margin-right:.75pt;text-align:center;
   background:white'><b><span style='font-size:24.0pt;font-family:"Americana BT","serif"'>New
 								York City Construction Safety Training LLC</span></b></p>
 					<p class=Heading><em><span style='font-size:18.0pt;font-family:"Cambria","serif"'>In
 								Recognition of Attendance and Achievement</span></em></p>
+								<p class=MsoNormal align=center style='margin-right:.75pt;text-align:center;
+  background:white'>&nbsp;</p>
+					<p class=MsoNormal align=center style='margin-right:.75pt;text-align:center;
+  background:white'>&nbsp;</p>
+
 					<p class=MsoNormal align=center style='margin-right:.75pt;text-align:center;
   line-height:150%;background:white'><b><span style='font-size:36.0pt;
   line-height:150%;font-family:"Americana BT","serif";color:green'>{{student_name}}</span></b></p>
@@ -299,6 +305,10 @@
 					<p class=MsoNormal align=center style='text-align:center'><span
 							style='font-size:18.0pt;font-family:"Colonna MT";color:maroon'>
 							Completion Date {{completed_date}}</span></p>
+							<p class=MsoNormal align=center style='margin-right:.75pt;text-align:center;
+  background:white'>&nbsp;</p>
+					<p class=MsoNormal align=center style='margin-right:.75pt;text-align:center;
+  background:white'>&nbsp;</p>
 					<p class=MsoNormal align=center style='margin-right:.75pt;text-align:center;
   background:white'><b><span style='font-size:20.0pt;font-family:"Americana BT","serif"'>&nbsp;</span></b></p>
 					<p class=MsoNormal align=center style='margin-right:.75pt;text-align:center;
@@ -314,18 +324,19 @@
   background:white'><b><span style='font-family:"Americana BT","serif"'>Authorized
 								Trainer Region II Atlantic OHSA Training Ctr.# 12-00010727</span></b></p>
 					<p class=MsoNormal align=center style='text-align:center'>
-					<img width=313 height=93 id="Picture 9" src="{{sign_image}}"></p>
+						<img width=313 height=93 id="Picture 9" src="{{sign_image}}"></p>
 					<p class=MsoNormal align=center style='text-align:center'>&nbsp;</p>
 					<p class=MsoNormal align=center style='text-align:center'>&nbsp;</p>
 					<p class=MsoNormal align=center style='margin-right:.75pt;text-align:center;
   background:white'>&nbsp;</p>
+					<p class=MsoNormal align=center style='text-align:center'>
+						<img width=313 height=196 id="Picture1 9"
+							src="https://construction-safety-nyc.com/static/images/iacet.jpg"></p>
 				</td>
 			</tr>
 		</table>
 		<p class=MsoNormal>&nbsp;</p>
-
 	</div>
-
 </body>
 
 </html>
