--- a/app_public/templates/about/about.html
+++ b/app_public/templates/about/about.html
@@ -28,15 +28,14 @@
                     <p>
                         NYC Construction Training, LLC is an educational organization dedicated to supporting
                         construction
-                        laborer education and career advancement through delivery of quality training that is useful and
-                        relevant for today’s labor industries.</p>
+                        safety management education and career advancement through delivery of quality training that is useful and relevant for today’s construction industries.
+</p>
                     <p><strong>
                             NYC Construction Safety Training Vision
                         </strong></p>
                     <p>
-                        NYC Construction Training, LLC will ensure that ongoing trainings will become available to meet
-                        the changing needs of New York City’s changing labor laws as well as laborer needs and legal
-                        training requirements.
+                       NYC Construction Training, LLC will ensure that ongoing trainings will become available to meet the changing needs of the construction industry. 
+
                     </p>
                     <p><strong>
                             NYC Construction Safety Training Values
