--- a/app_admin/templates/admin_base.html
+++ b/app_admin/templates/admin_base.html
@@ -7,18 +7,18 @@
   <meta charset="utf-8" />
   <title>NYC - Admin {% block title %}{% endblock %}</title>
 
-  <link rel="icon" type="image/png" sizes="192x192" href="{% static "/images/logo5.png" %}">
+  <link rel="icon" type="image/png" sizes="192x192" href="{% static '/images/logo5.png' %}">
 
-  <link href="{% static "/sb-admin/vendor/fontawesome-free/css/all.min.css" %}" rel="stylesheet" type="text/css">
+  <link href="{% static '/sb-admin/vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
   <link
     href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
     rel="stylesheet">
 
   <!-- Custom styles for this template-->
-  <link href="{% static "/sb-admin/css/sb-admin-2.css" %}" rel="stylesheet">
+  <link href="{% static '/sb-admin/css/sb-admin-2.css' %}" rel="stylesheet">
 
-  <link href="{% static "/sb-admin/vendor/datatables/dataTables.bootstrap4.min.css" %}" rel="stylesheet">
-  <link href="{% static "/sb-admin/vendor/toastr/toastr.min.css" %}" rel="stylesheet">
+  <link href="{% static '/sb-admin/vendor/datatables/dataTables.bootstrap4.min.css' %}" rel="stylesheet">
+  <link href="{% static '/sb-admin/vendor/toastr/toastr.min.css' %}" rel="stylesheet">
 
 </head>
 
@@ -41,7 +41,7 @@
       <hr class="sidebar-divider my-0">
 
       <!-- Nav Item - Dashboard -->
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href="{% url 'admin_dashboard' %}">
           <i class="fas fa-fw fa-tachometer-alt"></i>
           <span>Dashboard</span></a>
@@ -52,7 +52,7 @@
       <hr class="sidebar-divider my-0">
 
       <!-- Nav Item - Dashboard -->
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href="{% url 'admin_students' %}">
           <i class="fas fa-fw fa-users"></i>
           <span>Students</span></a>
@@ -62,7 +62,7 @@
       <hr class="sidebar-divider my-0">
 
       <!-- Nav Item - Dashboard -->
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href="{% url 'admin_students' %}">
           <i class="fas fa-fw fa-network-wired"></i>
           <span>Staff</span></a>
@@ -71,8 +71,16 @@
       <!-- Divider -->
       <hr class="sidebar-divider my-0">
 
-      <!-- Nav Item - Dashboard -->
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'admin_packages' %}">
+          <i class="fas fa-fw fa-shopping-bag"></i>
+          <span>Packages</span></a>
+      </li>
 
+      <!-- Divider -->
+      <hr class="sidebar-divider my-0">
+
+      <!-- Nav Item - Dashboard -->
       <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
           aria-expanded="false" aria-controls="collapseUtilities">
@@ -126,6 +134,13 @@
                 <i class="fas fa-network-wired fa-fw mr-2"></i> Staff
               </a>
             </li>
+
+            <li class="nav-item">
+              <a class="nav-link text-dark" href="{% url 'admin_packages' %}">
+                <i class="fas fa-shopping-bag fa-fw mr-2"></i> Packages
+              </a>
+            </li>
+
           </ul>
 
           <!-- Topbar Navbar -->
@@ -141,7 +156,7 @@
               <!-- Dropdown - User Information -->
               <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
 
-                <a class="dropdown-item" href="{% url "logout" %}">
+                <a class="dropdown-item" href="{% url 'logout' %}">
                   <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                   Logout
                 </a>
@@ -188,31 +203,60 @@
   </a>
 
   <!-- Bootstrap core JavaScript-->
-  <script src="{% static "/sb-admin/vendor/jquery/jquery.min.js" %}"></script>
-  <script src="{% static "/sb-admin/vendor/bootstrap/js/bootstrap.bundle.min.js" %}"></script>
+  <script src="{% static '/sb-admin/vendor/jquery/jquery.min.js' %}"></script>
+  <script src="{% static '/sb-admin/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 
   <!-- Core plugin JavaScript-->
-  <script src="{% static "/sb-admin/vendor/jquery-easing/jquery.easing.min.js" %}"></script>
+  <script src="{% static '/sb-admin/vendor/jquery-easing/jquery.easing.min.js' %}"></script>
 
-  <script src="{% static "/sb-admin/vendor/datatables/jquery.dataTables.min.js" %}"></script>
-  <script src="{% static "/sb-admin/vendor/datatables/dataTables.bootstrap4.min.js" %}"></script>
-  <script src="{% static "/sb-admin/vendor/bootbox/bootbox.all.min.js" %}"></script>
-  <script src="{% static "/sb-admin/vendor/toastr/toastr.min.js" %}"></script>
-  <script src="{% static "/sb-admin/vendor/jquery.form.min.js" %}"></script>
-  <script src="{% static "/sb-admin/vendor/moment.min.js" %}"></script>
+  <script src="{% static '/sb-admin/vendor/datatables/jquery.dataTables.min.js' %}"></script>
+  <script src="{% static '/sb-admin/vendor/datatables/dataTables.bootstrap4.min.js' %}"></script>
+  <script src="{% static '/sb-admin/vendor/bootbox/bootbox.all.min.js' %}"></script>
+  <script src="{% static '/sb-admin/vendor/toastr/toastr.min.js' %}"></script>
+  <script src="{% static '/sb-admin/vendor/jquery.form.min.js' %}"></script>
+  <script src="{% static '/sb-admin/vendor/moment.min.js' %}"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.2/dist/jquery.validate.min.js"></script>
 
   <!-- Custom scripts for all pages-->
-  <script src="{% static "/sb-admin/js/sb-admin-2.min.js" %}"></script>
+  <script src="{% static '/sb-admin/js/sb-admin-2.min.js' %}"></script>
 
 
   {% block scripts %}
   {% endblock %}
 
   <script>
+
+    Handlebars.registerHelper('ifCond', function (v1, operator, v2, options) {
+
+      switch (operator) {
+        case '==':
+          return (v1 == v2) ? options.fn(this) : options.inverse(this);
+        case '===':
+          return (v1 === v2) ? options.fn(this) : options.inverse(this);
+        case '!=':
+          return (v1 != v2) ? options.fn(this) : options.inverse(this);
+        case '!==':
+          return (v1 !== v2) ? options.fn(this) : options.inverse(this);
+        case '<':
+          return (v1 < v2) ? options.fn(this) : options.inverse(this);
+        case '<=':
+          return (v1 <= v2) ? options.fn(this) : options.inverse(this);
+        case '>':
+          return (v1 > v2) ? options.fn(this) : options.inverse(this);
+        case '>=':
+          return (v1 >= v2) ? options.fn(this) : options.inverse(this);
+        case '&&':
+          return (v1 && v2) ? options.fn(this) : options.inverse(this);
+        case '||':
+          return (v1 || v2) ? options.fn(this) : options.inverse(this);
+        default:
+          return options.inverse(this);
+      }
+    });
+
     $(document).ready(function () {
       $("#sidebarToggle").trigger('click');
     });
