--- a/app_cart/templates/checkout.html
+++ b/app_cart/templates/checkout.html
@@ -34,18 +34,18 @@
 {% verbatim %}
 <script type="text/x-handlebars-template" id='cartItemTemplate'>
     <li class="list-group-item d-flex justify-content-between lh-condensed">
-                        <div>
-                            <h6 class="my-0">{{title}}</h6>
-                            <small class="text-muted">{{subject}}</small>
-                        </div>
-                        <span class="text-muted">${{price}}</span>
+        <div> <h6 class="my-0">{{title}}</h6>
+                <small class="text-muted">{{subject}}</small>
+        </div>
+        <span class="text-muted">${{price}}</span>
     </li>
-   
  </script>
 {% endverbatim %}
+
 <script
     src="https://www.paypal.com/sdk/js?client-id=AfCYO-690TOTak5bLJ9lxaw-a7nY-8SBFID1X7a6Cmoyw2X4j79OMSm7ZDp_6oj218W5YKF19qqgWW0Y&currency=USD&disable-funding=credit,card">
 </script>
+
 <script>
     (function ($) {
 
