--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -657,8 +657,8 @@
                                     <li><a href="{% url 'courses_list' %}">All Courses</a></li>
                                 </ul>
                             </li>
-                            <li><a href="/about">About</a></li>
                             <li><a href="/contact">Contact</a></li>
+                            <li><a href="/packages">Packages</a></li>
                             <li><a href="/sst-verify/">Training Verification </a></li>
                             <li><a href="{%url 'cart_detail'%}">My Cart </a></li>
                         </ul>
@@ -668,11 +668,13 @@
             <div class="canvas__open"><i class="fa fa-bars"></i></div>
         </div>
     </header>
+    
     <!-- Header Section End -->
     <div id="content">
         {% block content %}
         {% endblock %}
     </div>
+
     <footer class="footer-area">
         <div class="top-footer-area">
             <div class="container">
@@ -686,10 +688,12 @@
             </div>
         </div>
         <div class="bottom-footer-area d-flex justify-content-center">
+            <a href="{% url 'about_detail' %}">About</a>
             <a href="#">Support</a>
             <a href="{% url 'legal_detail' %}">Legal</a>
             <a href="{% url 'student_manual_detail' %}">Student Manual</a>
             <a href="{% url 'faq' %}">FAQ</a>
+            <a href="{% url 'packages' %}">Packages</a>
             <a href="/sitemap.xml">Sitemap</a>
         </div>
         <div>
@@ -717,6 +721,7 @@
             </div>
         </div>
     </div>
+
     <script src="{% static "/fe_v1/js/jquery-3.3.1.min.js" %}"></script>
     <script src="{% static "/fe_v1/js/bootstrap.min.js" %}"></script>
     <script src="{% static "/fe_v1/js/jquery.slicknav.js" %}"></script>
@@ -728,11 +733,14 @@
     
      <script src="{% static "/fe_v1/js/main.js" %}"></script>
      <script src="{% static "/fe_v1/js/cart.js" %}"></script>
+
     {% comment %} <script src="{% static "/plugins/jquery/jquery-ui.min.js" %}"></script>
     <script src="{% static "/pickadate/jquery.datetimepicker.full.min.js" %}"></script>
     <script src="{% static "/plugins/toastr/toastr.min.js" %}"></script>
     <script src="{% static "/plugins/jquery.sticky.js" %}"></script> {% endcomment %}
+    
     <script src="//media.twiliocdn.com/sdk/js/video/releases/2.4.0/twilio-video.min.js"></script>
+    
     {% block scripts %}
     {% endblock %}
     <script>
