--- a/app_public/templates/sst/verify.html
+++ b/app_public/templates/sst/verify.html
@@ -1,7 +1,7 @@
 {% extends "app_base.html" %}
 {% load staticfiles %}
 {% block title %}
-- SST Card Verification
+- Certificate Verification
 {% endblock %}
 {% block content %}
 <div class="home-courses">
@@ -22,7 +22,7 @@
                                         <div class="row">
                                             <div class="col">
                                                 <div class="clearfix">
-                                                    <label for="exampleInputEmail1">Card Number</label>
+                                                    <label for="exampleInputEmail1">Certificate Number</label>
                                                     <input type="text" class="form-control" id="txtCardNumber"
                                                         name="card_number" />
                                                 </div>
