--- a/students/templates/students/course/certificate_template copy.html
+++ b/students/templates/students/course/certificate_template copy.html
@@ -1,10 +1,17 @@
+{% load staticfiles %}
 <html>
 
 <head>
 	<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
 	<meta name=Generator content="Microsoft Word 14 (filtered)">
-	<title>Enter your award text here</title>
+	<title>Certificate of
+		Training - {{student_name}}</title>
 	<style>
+		@page {
+        size: letter landscape;
+        margin: 2cm;
+    }
+	
 		<!--
 		/* Font Definitions */
 		@font-face {
@@ -49,6 +56,26 @@
 			page-break-after: avoid;
 			font-size: 16.0pt;
 			font-family: "Cambria", "serif";
+		}
+
+		p.MsoHeader,
+		li.MsoHeader,
+		div.MsoHeader {
+			mso-style-link: "Header Char";
+			margin: 0in;
+			margin-bottom: .0001pt;
+			font-size: 10.0pt;
+			font-family: "Times New Roman", "serif";
+		}
+
+		p.MsoFooter,
+		li.MsoFooter,
+		div.MsoFooter {
+			mso-style-link: "Footer Char";
+			margin: 0in;
+			margin-bottom: .0001pt;
+			font-size: 10.0pt;
+			font-family: "Times New Roman", "serif";
 		}
 
 		p.MsoCaption,
@@ -212,10 +239,21 @@
 			font-weight: bold;
 		}
 
+		span.HeaderChar {
+			mso-style-name: "Header Char";
+			mso-style-link: Header;
+		}
+
+		span.FooterChar {
+			mso-style-name: "Footer Char";
+			mso-style-link: Footer;
+		}
+
 		.MsoChpDefault {
 			font-size: 10.0pt;
 		}
 
+		/* Page Definitions */
 		@page WordSection1 {
 			size: 11.0in 8.5in;
 			margin: 1.25in 1.5in 1.25in 1.5in;
@@ -235,77 +273,76 @@
 		}
 		-->
 	</style>
-
 </head>
 
 <body lang=EN-US link=blue vlink="#954F72">
-
-	<div class=WordSection1>
-		<br>
-		<table align="center" class=MsoNormalTable border=0 cellspacing=0 cellpadding=0
-			style='border-collapse:collapse;margin: 40pt auto 0 auto;'>
+	<div class=WordSection1 style='border:2px solid #000;'>
+		<table align='center' class=MsoNormalTable border=0 cellspacing=0 cellpadding=0
+			style='border-collapse:collapse;margin: 43pt auto 0 auto;'>
 			<tr style='page-break-inside:avoid;height:418.55pt'>
-				<td width=757 valign=top style='width:568.1pt;padding:0in 5.4pt 0in 5.4pt;
-  height:418.55pt'>
-					<p class=Heading><span style='font-size:48.0pt'>Certificate of Training </span>
+				<td width=757 valign=top style='width:568.1pt;padding:0in 5.4pt 0in 5.4pt;height:418.55pt'>
+					<p class=MsoNormal align=center style='margin-right:.75pt;text-align:center;
+  background:white'>&nbsp;</p>
+					<p class=MsoNormal align=center style='margin-right:.75pt;text-align:center;
+  background:white'>&nbsp;</p>
+					<p class=Heading>
+						<span style='font-size:48.0pt'>Certificate of
+							Training </span>
+						<br>
+						<br>
+						
+						Presented by
 					</p>
-					<p class="Heading">
-						Presented by</p>
+					<p class=MsoNormal align=center style='text-align:center'>&nbsp;</p>
 					<p class=MsoNormal align=center style='margin-right:.75pt;text-align:center;
-  background:white'><b><span style='font-size:24.0pt;font-family:"Americana BT","serif"'>
-								Federico Roca CHST ASP</span></b></p>
-					<p class=MsoNormal align=center style='margin-right:.75pt;text-align:center;
-  background:white'><b><span style='font-size:24.0pt;font-family:"Americana BT","serif"'></span></b><b><span
-								style='font-size:18.0pt;font-family:"Americana BT","serif"'>
-
-								Construction Outreach Trainer</span></b></p>
-
+  background:white'><b><span style='font-size:24.0pt;font-family:"Americana BT","serif"'>New
+								York City Construction Safety Training LLC</span></b></p>
 					<p class=Heading><em><span style='font-size:18.0pt;font-family:"Cambria","serif"'>In
 								Recognition of Attendance and Achievement</span></em></p>
+								<p class=MsoNormal align=center style='margin-right:.75pt;text-align:center;
+  background:white'>&nbsp;</p>
+					<p class=MsoNormal align=center style='margin-right:.75pt;text-align:center;
+  background:white'>&nbsp;</p>
+
 					<p class=MsoNormal align=center style='margin-right:.75pt;text-align:center;
   line-height:150%;background:white'><b><span style='font-size:36.0pt;
-  line-height:150%;font-family:"Americana BT","serif";color:green'> {{student_name}} </span></b></p>
-
-					<h1 align=center> {{object.title}} </h1>
-					<p class=MsoNormal align=center><span style='font-size:18.0pt;font-family:"Colonna MT";
-  color:maroon'></span><span style='font-size:9.0pt;font-family:"Colonna MT";color:maroon'>Completion
-							Date {{completed_date}}</span></p>
-
-
-					<p class=MsoNormal align=right style='margin-right:.75pt;text-align:right;
-  background:white'><b><span style='font-size:20.0pt;font-family:"Americana BT","serif"'>
-							</span></b></p>
-					<p class=MsoNormal align=right style='margin-right:.75pt;text-align:right;
-  background:white;margin-top:15pt;'><b><span style='font-size:20.0pt;font-family:"Americana BT","serif"'>
-							</span></b><b><span style='font-size:16.0pt;font-family:"Americana BT","serif"'>
-								Federico Roca CHST ASP </span></b></p>
-					<p class=MsoNormal align=right style='margin-right:.75pt;text-align:right;
-  background:white'><b><span style='font-family:"Americana BT","serif"'>
-							</span></b><b><span style='font-family:"Americana BT","serif"'>
-								Construction Outreach Trainer in</span></b></p>
-					<p class=MsoNormal align=right style='margin-right:.75pt;text-align:right;
-  background:white'><b><span style='font-family:"Americana BT","serif"'>
-							</span></b><b><span style='font-family:"Americana BT","serif"'>accordance
+  line-height:150%;font-family:"Americana BT","serif";color:green'>{{student_name}}</span></b></p>
+					<h1 align=center style='text-align:center'>{{object.title}}</h1>
+					<p class=MsoNormal align=center style='text-align:center'><span
+							style='font-size:18.0pt;font-family:"Colonna MT";color:maroon'>
+							Completion Date {{completed_date}}</span></p>
+							<p class=MsoNormal align=center style='margin-right:.75pt;text-align:center;
+  background:white'>&nbsp;</p>
+					<p class=MsoNormal align=center style='margin-right:.75pt;text-align:center;
+  background:white'>&nbsp;</p>
+					<p class=MsoNormal align=center style='margin-right:.75pt;text-align:center;
+  background:white'><b><span style='font-size:20.0pt;font-family:"Americana BT","serif"'>&nbsp;</span></b></p>
+					<p class=MsoNormal align=center style='margin-right:.75pt;text-align:center;
+  background:white'><b><span style='font-size:20.0pt;font-family:"Americana BT","serif"'>Federico
+								Roca CHST ASP</span></b></p>
+					<p class=MsoNormal align=center style='margin-right:.75pt;text-align:center;
+  background:white'><b><span style='font-family:"Americana BT","serif"'>Construction
+								Outreach Trainer in</span></b></p>
+					<p class=MsoNormal align=center style='margin-right:.75pt;text-align:center;
+  background:white'><b><span style='font-family:"Americana BT","serif"'>accordance
 								with guidelines provided by OSHA</span></b></p>
-					<p class=MsoNormal align=right style='margin-right:.75pt;text-align:right;
-  background:white'><b><span style='font-family:"Americana BT","serif"'>
-							</span></b><b><span style='font-family:"Americana BT","serif"'>Authorized
-								Trainer Region II Atlantic OHSA Training Ctr.# 12-000107272</span></b></p>
-					<p class=MsoNormal align=right style='margin-right:.75pt;text-align:right;
-  background:white;margin-top:4pt;'>
-  <span style='font-size:6pt;font-family:"Americana BT","serif"'>
-								Certificate ID: {{ref_number}}</span>
-						
-					</p>
-
+					<p class=MsoNormal align=center style='margin-right:.75pt;text-align:center;
+  background:white'><b><span style='font-family:"Americana BT","serif"'>Authorized
+								Trainer Region II Atlantic OHSA Training Ctr.# 12-00010727</span></b></p>
+					<p class=MsoNormal align=center style='text-align:center'>
+						<img width=313 height=93 id="Picture 9" src="{{sign_image}}"></p>
+					<p class=MsoNormal align=center style='text-align:center'>&nbsp;</p>
+					<p class=MsoNormal align=center style='text-align:center'>&nbsp;</p>
+					<p class=MsoNormal align=center style='margin-right:.75pt;text-align:center;
+  background:white'>&nbsp;</p>
+					<p class=MsoNormal align=center style='text-align:center'>
+						<img width=313 height=196 id="Picture1 9"
+							src="https://construction-safety-nyc.com/static/images/iacet.jpg"></p>
 				</td>
 			</tr>
 		</table>
-
 		<p class=MsoNormal>&nbsp;</p>
-
 	</div>
-
 </body>
 
 </html>
