--- a/students/templates/students/course/certificate_template.html
+++ b/students/templates/students/course/certificate_template.html
@@ -4,9 +4,10 @@
 <head>
 	<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
 	<meta name=Generator content="Microsoft Word 14 (filtered)">
-	<title>Enter your award text here</title>
+	<title>Certificate of
+		Training - {{student_name}}</title>
 	<style>
-		<!--
+
 		/* Font Definitions */
 		@font-face {
 			font-family: Cambria;
